--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Austin FPV Drone Racing</title>
         <meta name="description" content="Clubs, resources, and communities for FPV drone pilots in Austin, Texas">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
 
-        <link rel="stylesheet" href="css/normalize.css">
+        <!-- <link rel="stylesheet" href="css/normalize.css"> -->
         <link rel="stylesheet" href="css/main.css">
 
         <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
