link fixes when hover

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
         <div id="columns">
             <figure id="clubs">
-                <h2>AMA Clubs</h2>
+                <div class="h2-container"><h2>AMA Clubs</h2></div>
                 <ul>
                     <li>
                         <a href="http://austinrc.org">Austin RC</a>
@@ -45,7 +45,7 @@
             </figure>
     
             <figure id="chapters">
-                <h2>MultiGP Chapters</h2>
+                <div class="h2-container"><h2>MultiGP Chapters</h2></div>
                 <ul>
                     <li>
                         <a href="https://www.multigp.com/chapters/view/?chapter=Austin-FPV">Austin</a>
@@ -57,7 +57,7 @@
             </figure>
 
             <figure id="communities">
-                <h2>Communities</h2>
+                <div class="h2-container"><h2>Communities</h2></div>
                 <ul>
                     <li>
                         <a href="https://www.facebook.com/groups/545684732235144/">Facebook Group</a>
