--- a/index.html
+++ b/index.html
@@ -68,11 +68,26 @@
                 </ul>
             </figure>
             
+            <figure id="photos">
+                <div class="h2-container"><h2>Photos</h2></div>
+                <ul>
+                    <li>
+                        <a href="https://kristenlee.passgallery.com/-129droneatarca/gallery/">2017.12.09 ARCA</a>
+                    </li>
+                </ul>
+            </figure>
+
             <figure id="local-business">
                 <div class="h2-container"><h2>Local Business</h2></div>
                 <ul>
                     <li>
                         <a href="https://theflynoshop.com/">Flynoceros</a>
+                    </li>
+                    <li>
+                        <a href="https://soldersport.com/">SolderSport</a>
+                    </li>
+                    <li>
+                        <a href="http://drfpvshop.com/">DRFPV</a>
                     </li>
                 </ul>
             </figure>
@@ -82,15 +97,6 @@
                 <ul>
                     <li>
                         <a href="https://pirofliprc.com/">Pyro Drone (ATXFPV)</a>
-                    </li>
-                </ul>
-            </figure>
-            
-            <figure id="photos">
-                <div class="h2-container"><h2>Photos</h2></div>
-                <ul>
-                    <li>
-                        <a href="https://kristenlee.passgallery.com/-129droneatarca/gallery/">2017.12.09 ARCA</a>
                     </li>
                 </ul>
             </figure>
