add slack invite link

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                     <li>
                         <a href="https://www.facebook.com/groups/545684732235144/">Facebook Group</a>
                     </li>
+                    <li>
+                        <a href="https://join.slack.com/t/austinfpv/shared_invite/enQtMjg5MjQ5MTk5NDE0LTQwMmIwMTZmMGU5OWVmZTIyYmVjNWYzOTQ2M2U1MTkxNDUxMDMyYzk0Mjk1ZTRkNzU5YWY2YjhjMzAxZDJkZDg">Slack</a>
+                    </li>
                 </ul>
             </figure>
             
