--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
         <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.typekit.net/igb1dmt.css">
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111100995-1"></script>
@@ -28,7 +29,7 @@
     </head>
     <body>
         <header>
-            <h1>Austin FPV <span>Racing</span></h1>
+            <h1>Austin <span>FPV Racing</span></h1>
         </header>
         
         <div id="columns">
@@ -39,7 +40,7 @@
                         <a href="http://austinrc.org">ARCA (NE Austin)</a>
                     </li>
                     <li>
-                        <a href="http://roundrockrc.org">Lone Star (Round Rock OSP)</a>
+                        <a href="http://roundrockrc.org">Lone Star (RR/OSP)</a>
                     </li>
                     <li>
                         <a href="https://www.google.com/maps/place/Temple+Unlimited+Fun+Flyers/@31.12292,-97.4326247,17z/data=!3m1!4b1!4m5!3m4!1s0x86456a0e8238fc35:0xb5f4359da10fb4c5!8m2!3d31.12292!4d-97.430436">T.U.F.F. (Temple)</a>
@@ -87,10 +88,10 @@
                         <a href="https://theflynoshop.com/">Flynoceros</a>
                     </li>
                     <li>
-                        <a href="https://soldersport.com/">SolderSport</a>
+                        <a href="http://drfpvshop.com/">DRFPV</a>
                     </li>
                     <li>
-                        <a href="http://drfpvshop.com/">DRFPV</a>
+                        <a href="https://soldersport.com/">SolderSport</a>
                     </li>
                 </ul>
             </figure>
