pyro drone doesn't use ssl :(

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="h2-container"><h2>Coupons</h2></div>
                 <ul>
                     <li>
-                        <a href="https://pirofliprc.com/">Pyro Drone (ATXFPV)</a>
+                        <a href="http://pirofliprc.com/">Pyro Drone (ATXFPV)</a>
                     </li>
                 </ul>
             </figure>
