--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
                 <div class="h2-container"><h2>Coupons</h2></div>
                 <ul>
                     <li>
-                        <a href="http://pirofliprc.com/">Pyro Drone (ATXFPV)</a>
+                        <a href="http://pirofliprc.com/">Pyro Drone <span>ATXFPV</span></a>
+                    </li>
+                    <li>
+                        <a href="https://www.racedayquads.com/">RDQ <span>ATXFPV</span></a>
                     </li>
                 </ul>
             </figure>
