correct RDQ coupon code

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <a href="http://pirofliprc.com/">Pyro Drone <span>ATXFPV</span></a>
                     </li>
                     <li>
-                        <a href="https://www.racedayquads.com/">RDQ <span>ATXFPV</span></a>
+                        <a href="https://www.racedayquads.com/">RDQ <span>ATXMGP</span></a>
                     </li>
                 </ul>
             </figure>
