add race calendar

--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
                 </ul>
             </figure>
 
+            <figure id="races">
+                <div class="h2-container"><h2>Upcoming Races</h2></div>
+                <ul>
+                    <li>
+                        <a href="https://calendar.google.com/calendar?cid=OXVzMmpqdWg2cTVsdmpwY3Z2bzdwZTdybThAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ">Race Calendar</a>
+                    </li>
+                </ul>
+            </figure>
+
             <figure id="communities">
                 <div class="h2-container"><h2>Communities</h2></div>
                 <ul>
@@ -69,14 +78,8 @@
                     <li>
                         <a href="https://join.slack.com/t/austinfpv/shared_invite/enQtMjg5MjQ5MTk5NDE0LTQwMmIwMTZmMGU5OWVmZTIyYmVjNWYzOTQ2M2U1MTkxNDUxMDMyYzk0Mjk1ZTRkNzU5YWY2YjhjMzAxZDJkZDg">Slack</a>
                     </li>
-                </ul>
-            </figure>
-            
-            <figure id="photos">
-                <div class="h2-container"><h2>Photos</h2></div>
-                <ul>
                     <li>
-                        <a href="https://kristenlee.passgallery.com/-129droneatarca/gallery/">2017.12.09 ARCA</a>
+                        <a href="https://instagram.com/austinfpvracing">Instagram</a>
                     </li>
                 </ul>
             </figure>
@@ -85,7 +88,7 @@
                 <div class="h2-container"><h2>Local Business</h2></div>
                 <ul>
                     <li>
-                        <a href="https://theflynoshop.com/?utm_source=AustinFPVRacing">Flynoceros</a>
+                        <a href="https://theflynoshop.com/?utm_source=AustinFPVRacing">Flynoceros <span>ATXFPV</span></a>
                     </li>
                     <li>
                         <a href="http://drfpvshop.com/?utm_source=AustinFPVRacing">DRFPV</a>
