Update slack invite URL to avoid pushing a website change when link expires

--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
-
-        <!-- <link rel="stylesheet" href="css/normalize.css"> -->
         <link rel="stylesheet" href="css/main.css">
 
         <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
@@ -76,7 +73,7 @@
                         <a href="https://www.facebook.com/groups/545684732235144/">Facebook Group</a>
                     </li>
                     <li>
-                        <a href="https://join.slack.com/t/austinfpv/shared_invite/enQtMjg5MjQ5MTk5NDE0LTQwMmIwMTZmMGU5OWVmZTIyYmVjNWYzOTQ2M2U1MTkxNDUxMDMyYzk0Mjk1ZTRkNzU5YWY2YjhjMzAxZDJkZDg">Slack</a>
+                        <a href="http://slack.austinfpv.racing/">Slack Invite</a>
                     </li>
                     <li>
                         <a href="https://instagram.com/austinfpvracing">Instagram</a>
