add discord link

--- a/index.html
+++ b/index.html
@@ -70,13 +70,16 @@
                 <div class="h2-container"><h2>Communities</h2></div>
                 <ul>
                     <li>
-                        <a href="https://www.facebook.com/groups/545684732235144/">Facebook Group</a>
-                    </li>
-                    <li>
-                        <a href="http://slack.austinfpv.racing/">Slack Invite</a>
+                        <a href="http://discord.austinfpv.racing/">Join Discord</a>
                     </li>
                     <li>
                         <a href="https://instagram.com/austinfpvracing">Instagram</a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/groups/545684732235144/">Facebook Group</a>
+                    </li>
+                    <li>
+                        <a href="http://slack.austinfpv.racing/">Join Slack</a>
                     </li>
                 </ul>
             </figure>
