Add local business: Sky Ready RC

--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
                         <a href="http://drfpvshop.com/?utm_source=AustinFPVRacing">DRFPV</a>
                     </li>
                     <li>
+                        <a href="https://www.skyreadyrc.com/?utm_source=AustinFPVRacing">Sky Ready RC</a>
+                    </li>
+                    <li>
                         <a href="https://soldersport.com/?utm_source=AustinFPVRacing">SolderSport</a>
                     </li>
                 </ul>
