swap Dalton's link for Lil' Duece

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <a href="https://theflynoshop.com/?utm_source=AustinFPVRacing">Flynoceros <span>ATXFPV</span></a>
                     </li>
                     <li>
-                        <a href="http://drfpvshop.com/?utm_source=AustinFPVRacing">DRFPV</a>
+                        <a href="https://lilduece.com/?utm_source=AustinFPVRacing">Lil' Duece &#128169;</a>
                     </li>
                     <li>
                         <a href="https://www.skyreadyrc.com/?utm_source=AustinFPVRacing">Sky Ready RC</a>
