Add RQ; improve dev/build process

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <link rel="stylesheet" href="css/main.css">
-
-        <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
-        <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+        <link rel="icon" type="image/png" href="img/favicon-96.png" sizes="96x96" />
+        <link rel="icon" type="image/png" href="img/favicon-32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="img/favicon-16.png" sizes="16x16" />
         <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
         <link rel="stylesheet" href="https://use.typekit.net/igb1dmt.css">
 
@@ -30,6 +30,26 @@
         </header>
         
         <div id="columns">
+            <figure id="races">
+                <div class="h2-container"><h2>&#x1F3C6; Upcoming Races &#x1F3C6;</h2></div>
+                <ul>
+                    <li>
+                        <a href="https://www.multigp.com/races/view/?race=13069/2018-Austin-MultiGP-Regional-Qualifier">Austin 2018 MultiGP Regional Qualifier</a>
+                    </li>
+                    <li>
+                        <p>
+                            &#x1F64B; Spectators Welcome!
+                        </p>
+                        <p>
+                            &#x1F4CD; Old Settlers Park, Round Rock
+                        </p>
+                        <p>
+                            &#x23F1; September 28 10-3
+                        </p>
+                    </li>
+                </ul>
+            </figure>
+            
             <figure id="clubs">
                 <div class="h2-container"><h2>AMA Clubs</h2></div>
                 <ul>
@@ -57,20 +77,11 @@
                 </ul>
             </figure>
 
-            <figure id="races">
-                <div class="h2-container"><h2>Upcoming Races</h2></div>
-                <ul>
-                    <li>
-                        <a href="https://calendar.google.com/calendar?cid=OXVzMmpqdWg2cTVsdmpwY3Z2bzdwZTdybThAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ">Race Calendar</a>
-                    </li>
-                </ul>
-            </figure>
-
             <figure id="communities">
                 <div class="h2-container"><h2>Communities</h2></div>
                 <ul>
                     <li>
-                        <a href="http://discord.austinfpv.racing/">Join Discord</a>
+                        <a href="https://discord.gg/vZ2u9W6">Join Discord</a>
                     </li>
                     <li>
                         <a href="https://instagram.com/austinfpvracing">Instagram</a>
