--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Austin FPV Drone Racing</title>
-        <meta name="description" content="Clubs, resources, and communities for FPV drone pilots in Austin, Texas">
+        <meta name="description" content="Clubs, resources, and communities for FPV drone pilots in Austin, Texas. New to FPV Drone Racing? Come meet us at our biggest race of the year!">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -44,7 +44,7 @@
                             &#x1F4CD; Old Settlers Park, Round Rock
                         </p>
                         <p>
-                            &#x23F1; September 28 10-3
+                            July 28 &#x23F1;Racing: 11-3
                         </p>
                     </li>
                 </ul>
