Update RQ links with photos

--- a/index.html
+++ b/index.html
@@ -31,21 +31,10 @@
         
         <div id="columns">
             <figure id="races">
-                <div class="h2-container"><h2>&#x1F3C6; Upcoming Races &#x1F3C6;</h2></div>
+                <div class="h2-container"><h2>&#x1F3C6; Races &#x1F3C6;</h2></div>
                 <ul>
                     <li>
-                        <a href="https://www.multigp.com/races/view/?race=13069/2018-Austin-MultiGP-Regional-Qualifier">Austin 2018 MultiGP Regional Qualifier</a>
-                    </li>
-                    <li>
-                        <p>
-                            &#x1F64B; Spectators Welcome!
-                        </p>
-                        <p>
-                            &#x1F4CD; Old Settlers Park, Round Rock
-                        </p>
-                        <p>
-                            July 28 &#x23F1;Racing: 11-3
-                        </p>
+                        <a href="https://kristenlee.passgallery.com/-728austinqualifier/gallery">2018 RQ Event Photos</a>
                     </li>
                 </ul>
             </figure>
