Update facebook group link

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <a href="https://instagram.com/austinfpvracing">Instagram</a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/groups/545684732235144/">Facebook Group</a>
+                        <a href="https://www.facebook.com/groups/austinfpv">Facebook Group</a>
                     </li>
                 </ul>
             </figure>
