Austin FPV Flyers

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                     <li>
                         <a href="https://calendar.google.com/calendar?cid=OXVzMmpqdWg2cTVsdmpwY3Z2bzdwZTdybThAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ">Race Calendar</a>
                     </li>
+                    <li>
+                        <a href="https://kristenlee.passgallery.com/-728austinqualifier/gallery">2018 RQ Event Photos</a>
+                    </li>
                 </ul>
             </figure>
 
@@ -47,9 +50,6 @@
                     </li>
                     <li>
                         <a href="https://www.multigp.com/chapters/view/?chapter=Temple-Unlimited-Fun-Flyers">Temple</a>
-                    </li>
-                    <li>
-                        <a href="https://kristenlee.passgallery.com/-728austinqualifier/gallery">2018 RQ Event Photos</a>
                     </li>
                 </ul>
             </figure>
@@ -70,16 +70,16 @@
             </figure>
 
             <figure id="clubs">
-                <div class="h2-container"><h2>AMA Clubs</h2></div>
+                <div class="h2-container"><h2>Where to Fly</h2></div>
                 <ul>
                     <li>
-                        <a href="https://lonestaraeronuts.org?utm_source=AustinFPVRacing">Lone Star Aeronuts<br /><span class="location">Round Rock/OSP</span></a>
+                        <a href="https://lonestaraeronuts.org?utm_source=AustinFPVRacing">Lone Star Aeronuts AMA Club<br /><span class="location">Round Rock/OSP</span></a>
+                    </li>
+                    <li>
+                        <a href="https://www.meetup.com/Austin-FPV-Flyers/">Austin FPV Flyers<br /><span class="location">Circle C/South Austin</span></a>
                     </li>
                     <li>
                         <a href="https://www.google.com/maps/place/Temple+Unlimited+Fun+Flyers/@31.12292,-97.4326247,17z/data=!3m1!4b1!4m5!3m4!1s0x86456a0e8238fc35:0xb5f4359da10fb4c5!8m2!3d31.12292!4d-97.430436">T.U.F.F.<br /><span class="location">Temple</span></a>
-                    </li>
-                    <li>
-                        <a href="http://austinrc.org?utm_source=AustinFPVRacing">ARCA<br /><span class="location">Austin/Decker Lake</span></a>
                     </li>
                 </ul>
             </figure>
