--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="h2-container"><h2>&#x1F3C6; Races &#x1F3C6;</h2></div>
                 <ul>
                     <li>
-                        <a href="https://calendar.google.com/calendar?cid=OXVzMmpqdWg2cTVsdmpwY3Z2bzdwZTdybThAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ">Race Calendar</a>
+                        <a href="https://calendar.google.com/calendar/embed?src=9us2jjuh6q5lvjpcvvo7pe7rm8%40group.calendar.google.com&ctz=America%2FChicago">Race Calendar</a>
                     </li>
                     <li>
                         <a href="https://kristenlee.passgallery.com/-728austinqualifier/gallery">2018 RQ Event Photos</a>
@@ -88,7 +88,7 @@
                 <div class="h2-container"><h2>Local Business</h2></div>
                 <ul>
                     <li>
-                        <a href="https://brokenpropcrew.com/?utm_source=AustinFPVRacing">brokenpropcrew</a>
+                        <a href="http://brokenpropcrew.com/?utm_source=AustinFPVRacing">brokenpropcrew</a>
                     </li>
                     <li>
                         <a href="https://theflynoshop.com/?utm_source=AustinFPVRacing">Flynoceros<br /><span class="code">ATXFPV</span></a>
