open links in new tab

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                 <div class="h2-container"><h2>&#x1F3C6; Races &#x1F3C6;</h2></div>
                 <ul>
                     <li>
-                        <a href="https://calendar.google.com/calendar/embed?src=9us2jjuh6q5lvjpcvvo7pe7rm8%40group.calendar.google.com&ctz=America%2FChicago">Race Calendar</a>
+                        <a target="_blank" href="https://calendar.google.com/calendar/embed?src=9us2jjuh6q5lvjpcvvo7pe7rm8%40group.calendar.google.com&ctz=America%2FChicago">Race Calendar</a>
                     </li>
                     <li>
-                        <a href="https://kristenlee.passgallery.com/-728austinqualifier/gallery">2018 RQ Event Photos</a>
+                        <a target="_blank" href="https://kristenlee.passgallery.com/-728austinqualifier/gallery">2018 RQ Event Photos</a>
                     </li>
                 </ul>
             </figure>
@@ -46,10 +46,10 @@
                 <div class="h2-container"><h2>MultiGP Chapters</h2></div>
                 <ul>
                     <li>
-                        <a href="https://www.multigp.com/chapters/view/?chapter=Austin-FPV-Racing">Austin FPV Racing</a>
+                        <a target="_blank" href="https://www.multigp.com/chapters/view/?chapter=Austin-FPV-Racing">Austin FPV Racing</a>
                     </li>
                     <li>
-                        <a href="https://www.multigp.com/chapters/view/?chapter=Temple-Unlimited-Fun-Flyers">Temple</a>
+                        <a target="_blank" href="https://www.multigp.com/chapters/view/?chapter=Temple-Unlimited-Fun-Flyers">Temple</a>
                     </li>
                 </ul>
             </figure>
@@ -58,13 +58,13 @@
                 <div class="h2-container"><h2>Communities</h2></div>
                 <ul>
                     <li>
-                        <a href="https://discord.gg/ycSkqYp">Join Discord</a>
+                        <a target="_blank" href="https://discord.gg/ycSkqYp">Join Discord</a>
                     </li>
                     <li>
-                        <a href="https://instagram.com/austinfpvracing">Instagram</a>
+                        <a target="_blank" href="https://instagram.com/austinfpvracing">Instagram</a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/groups/austinfpv">Facebook Group</a>
+                        <a target="_blank" href="https://www.facebook.com/groups/austinfpv">Facebook Group</a>
                     </li>
                 </ul>
             </figure>
@@ -73,13 +73,13 @@
                 <div class="h2-container"><h2>Where to Fly</h2></div>
                 <ul>
                     <li>
-                        <a href="https://lonestaraeronuts.org?utm_source=AustinFPVRacing">Lone Star Aeronuts AMA Club<br /><span class="location">Round Rock/OSP</span></a>
+                        <a target="_blank" href="https://lonestaraeronuts.org?utm_source=AustinFPVRacing">Lone Star Aeronuts AMA Club<br /><span class="location">Round Rock/OSP</span></a>
                     </li>
                     <li>
-                        <a href="https://www.meetup.com/Austin-FPV-Flyers/">Austin FPV Flyers<br /><span class="location">Circle C/South Austin</span></a>
+                        <a target="_blank" href="https://www.meetup.com/Austin-FPV-Flyers/">Austin FPV Flyers<br /><span class="location">Circle C/South Austin</span></a>
                     </li>
                     <li>
-                        <a href="https://www.google.com/maps/place/Temple+Unlimited+Fun+Flyers/@31.12292,-97.4326247,17z/data=!3m1!4b1!4m5!3m4!1s0x86456a0e8238fc35:0xb5f4359da10fb4c5!8m2!3d31.12292!4d-97.430436">T.U.F.F.<br /><span class="location">Temple</span></a>
+                        <a target="_blank" href="https://www.google.com/maps/place/Temple+Unlimited+Fun+Flyers/@31.12292,-97.4326247,17z/data=!3m1!4b1!4m5!3m4!1s0x86456a0e8238fc35:0xb5f4359da10fb4c5!8m2!3d31.12292!4d-97.430436">T.U.F.F.<br /><span class="location">Temple</span></a>
                     </li>
                 </ul>
             </figure>
@@ -88,16 +88,16 @@
                 <div class="h2-container"><h2>Local Business</h2></div>
                 <ul>
                     <li>
-                        <a href="http://brokenpropcrew.com/?utm_source=AustinFPVRacing">brokenpropcrew</a>
+                        <a target="_blank" href="http://brokenpropcrew.com/?utm_source=AustinFPVRacing">brokenpropcrew</a>
                     </li>
                     <li>
-                        <a href="https://theflynoshop.com/?utm_source=AustinFPVRacing">Flynoceros<br /><span class="code">ATXFPV</span></a>
+                        <a target="_blank" href="https://theflynoshop.com/?utm_source=AustinFPVRacing">Flynoceros<br /><span class="code">ATXFPV</span></a>
                     </li>
                     <li>
-                        <a href="https://lilduece.com/?utm_source=AustinFPVRacing">Lil' Duece &#128169;<br /><span class="code">ATXHOMIES</span> <span>15%</span></a>
+                        <a target="_blank" href="https://lilduece.com/?utm_source=AustinFPVRacing">Lil' Duece &#128169;<br /><span class="code">ATXHOMIES</span> <span>15%</span></a>
                     </li>
                     <li>
-                        <a href="https://www.skyreadyrc.com/?utm_source=AustinFPVRacing">Sky Ready RC</a>
+                        <a target="_blank" href="https://www.skyreadyrc.com/?utm_source=AustinFPVRacing">Sky Ready RC</a>
                     </li>
                 </ul>
             </figure>
@@ -106,10 +106,10 @@
                 <div class="h2-container"><h2>Chapter Support Coupons</h2></div>
                 <ul>
                     <li>
-                        <a href="http://pirofliprc.com/?utm_source=AustinFPVRacing">Pyro Drone<br /><span class="code">ATXFPV</span></a>
+                        <a target="_blank" href="http://pirofliprc.com/?utm_source=AustinFPVRacing">Pyro Drone<br /><span class="code">ATXFPV</span></a>
                     </li>
                     <li>
-                        <a href="https://www.racedayquads.com/?utm_source=AustinFPVRacing">RaceDayQuads<br /><span class="code">ATXMGP</span></a>
+                        <a target="_blank" href="https://www.racedayquads.com/?utm_source=AustinFPVRacing">RaceDayQuads<br /><span class="code">ATXMGP</span></a>
                     </li>
                 </ul>
             </figure>
