remove closed businesses, add QSL, bold discord

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
         <link rel="stylesheet" href="https://use.typekit.net/igb1dmt.css">
 
-        <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111100995-1"></script>
         <script>
         window.dataLayer = window.dataLayer || [];
@@ -58,7 +57,7 @@
                 <div class="h2-container"><h2>Communities</h2></div>
                 <ul>
                     <li>
-                        <a target="_blank" href="https://discord.gg/ycSkqYp">Join Discord</a>
+                        <a target="_blank" href="https://discord.gg/ycSkqYp"><strong>Join Discord</strong></a>
                     </li>
                     <li>
                         <a target="_blank" href="https://instagram.com/austinfpvracing">Instagram</a>
@@ -73,7 +72,7 @@
                 <div class="h2-container"><h2>Where to Fly</h2></div>
                 <ul>
                     <li>
-                        <a target="_blank" href="https://lonestaraeronuts.org?utm_source=AustinFPVRacing">Lone Star Aeronuts AMA Club<br /><span class="location">Round Rock/OSP</span></a>
+                        <a target="_blank" href="https://lonestaraeronuts.org?utm_source=AustinFPVRacing">Lone Star Aeronuts<br /><span class="location">AMA Club. Round Rock/OSP</span></a>
                     </li>
                     <li>
                         <a target="_blank" href="https://www.meetup.com/Austin-FPV-Flyers/">Austin FPV Flyers<br /><span class="location">Circle C/South Austin</span></a>
@@ -88,13 +87,10 @@
                 <div class="h2-container"><h2>Local Business</h2></div>
                 <ul>
                     <li>
-                        <a target="_blank" href="http://brokenpropcrew.com/?utm_source=AustinFPVRacing">brokenpropcrew</a>
+                        <a target="_blank" href="http://brokenpropcrew.com/?utm_source=AustinFPVRacing">broken prop crew</a>
                     </li>
                     <li>
-                        <a target="_blank" href="https://theflynoshop.com/?utm_source=AustinFPVRacing">Flynoceros<br /><span class="code">ATXFPV</span></a>
-                    </li>
-                    <li>
-                        <a target="_blank" href="https://lilduece.com/?utm_source=AustinFPVRacing">Lil' Duece &#128169;<br /><span class="code">ATXHOMIES</span> <span>15%</span></a>
+                        <a target="_blank" href="https://quadstandardlabs.com/?utm_source=AustinFPVRacing">Quad Standard Labs</a>
                     </li>
                     <li>
                         <a target="_blank" href="https://www.skyreadyrc.com/?utm_source=AustinFPVRacing">Sky Ready RC</a>
